--- a/smart-todo-analytics/package.json
+++ b/smart-todo-analytics/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
     "dayjs": "^1.11.18",
     "firebase": "^12.2.1",
+    "headlessui": "^0.0.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
