--- a/smart-todo-analytics/package.json
+++ b/smart-todo-analytics/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "dayjs": "^1.11.18",
     "firebase": "^12.2.1",
+    "framer-motion": "^12.23.12",
     "headlessui": "^0.0.0",
     "next": "15.5.3",
     "react": "19.1.0",
